--- a/main.yml
+++ b/main.yml
@@ -13,15 +13,15 @@
 
   roles:
     - role: elliotweiser.osx-command-line-tools
-    - role: geerlingguy.mac.homebrew
+    - role: gordian_jklapacz.mac.homebrew
       tags: ['homebrew']
     - role: geerlingguy.dotfiles
       when: configure_dotfiles
       tags: ['dotfiles']
-    - role: geerlingguy.mac.mas
+    - role: gordian_jklapacz.mac.mas
       when: mas_installed_apps or mas_installed_app_ids
       tags: ['mas']
-    - role: geerlingguy.mac.dock
+    - role: gordian_jklapacz.mac.dock
       when: configure_dock
       tags: ['dock']
 
