--- a/main.yml
+++ b/main.yml
@@ -3,6 +3,7 @@
 
   vars_files:
     - default.config.yml
+    - vars/python.yml
 
   pre_tasks:
     - name: Include playbook configuration.
@@ -24,9 +25,7 @@
     - role: gordian_jklapacz.mac.dock
       when: configure_dock
       tags: ['dock']
-    - name: markosamuli.pyenv
-      when: configure_python
-      tags: ['python']
+    
 
   tasks:
     - import_tasks: tasks/python.yml
