--- a/vars/python.yml
+++ b/vars/python.yml
@@ -11,7 +11,7 @@ pyenv_python_versions:
   - "{{ pyenv_python38_version }}"
   - "{{ pyenv_python39_version }}"
   - "{{ pyenv_python310_version }}"
-
+# -- environment specific setup
 homebrew_lib:
   - -L{{ homebrew_prefix }}/opt/openssl@1.1/lib
   - -L{{ homebrew_prefix }}/opt/libpq/lib
@@ -24,10 +24,8 @@ homebrew_extra_paths:
   - "{{ system_python_path }}"
   - "$PATH"
 homebrew_openblas: "{{ homebrew_prefix }}/opt/openblas"
-
 brew_libffi_pkgconfig_path: "{{ brew_prefix }}/opt/libffi/lib/pkgconfig"
 macosx_deployment_target: "{{ (ansible_distribution == 'MacOxSX') | ternary(ansible_distribution_version, None) }}"
-
 system_python_path: "{{ ansible_env.HOME }}/Library/Python/3.8/bin"
 zprofile_path: "{{ ansible_env.HOME }}/.zprofile"
 zshenv_path: "{{ ansible_env.HOME }}/.zshenv"
