--- a/default.config.yml
+++ b/default.config.yml
@@ -57,43 +57,88 @@ dotfiles_files:
 
 homebrew_installed_packages:
   - autoconf
+  - autojump
+  - automake
+  - awscli
   - bash-completion
+  - cloc
+  - coreutils
   - cowsay
   - doxygen
+  - enchant
+  - exiftool
+  - fd
+  - fdupes
+  - ffmpeg
+  - freetype
+  - fswatch
+  - gdbm
   - gettext
   - gifsicle
   - git
+  - git-delta
   - github/gh/gh
   - go
   - gpg
+  - graphicsmagick
+  - heroku
+  - hyperfine
+  - inetutils
   - iperf
+  - jpeg
+  - jpegoptim
+  - jq
+  - lesspipe
   - libevent
   - libffi
+  - libmemcached
+  - libpng
+  - { name: libpq, install_options: build-from-source }
+  - libtool
+  - libyaml
   - mcrypt
+  - memcached
+  - myrepos
+  - ncdu
   - neovim
+  - nginx
   - nmap
   - node
   - nvm
   - openblas
   - openssl
-  - php
+  - ossp-uuid
+  - pandoc
+  - parallel
   - pkg-config
+  - postgresql
+  - pre-commit
   - pv
+  - pwgen
+  - pyenv
+  - qpdf
   - readline
   - redis
+  - rsync
+  - sd
+  - shellcheck
   - sqlite
   - sqlite3
   - ssh-copy-id
+  - starship
+  - tcl-tk
+  - tree
+  - watch
+  - watchman
   - wget
   - wrk
   - xz
   - zlib
-  - tcl-tk
+  - zsh-completions
   - zsh-history-substring-search
-  - { name: libpq, install_options: build-from-source }
-
 
 homebrew_taps:
+  - heroku/brew
   - homebrew/core
   - homebrew/cask
 
@@ -143,21 +188,6 @@ pip_packages: []
 
 # Set to 'true' to configure Sublime Text.
 configure_sublime: false
-sublime_base_path: '~/Library/Application Support/Sublime Text'
-sublime_config_path: "Packages/User"
-sublime_package_control:
-  - "DocBlockr"
-  - "Dockerfile Syntax Highlighting"
-  - "FileDiffs"
-  - "GitHub Flavored Markdown Preview"
-  - "Jinja2"
-  - "Package Control"
-  - "PHP-Twig"
-  - "Pretty JSON"
-  - "SublimeLinter"
-  - "SublimeLinter-contrib-yamllint"
-  - "TrailingSpaces"
-  - "WordCount"
 
 #  ( git clone https://github.com/tvd0x2a/redislite --branch m1-support ../redislite-m1-support && cd ../redislite-m1-support && python setup.py install ) 
 # Glob pattern to ansible task files to run after all other tasks are finished.
