--- a/vars/python.yml
+++ b/vars/python.yml
@@ -6,11 +6,12 @@ pyenv_python38_version: "3.8.13"
 pyenv_python39_version: "3.9.11"
 pyenv_python310_version: "3.10.3"
 pyenv_python_versions:
-  - "{{ pyenv_python27_version }}"
-  - "{{ pyenv_python37_version }}"
-  - "{{ pyenv_python38_version }}"
-  - "{{ pyenv_python39_version }}"
   - "{{ pyenv_python310_version }}"
+  - "{{ pyenv_python39_version }}"
+  - "{{ pyenv_python38_version }}"
+  - "{{ pyenv_python37_version }}"
+  - "{{ pyenv_python27_version }}"
+pyenv_root: "{{ ansible_env.HOME }}/.pyenv"
 # -- environment specific setup
 homebrew_lib:
   - -L{{ homebrew_prefix }}/opt/openssl@1.1/lib
