--- a/default.config.yml
+++ b/default.config.yml
@@ -55,110 +55,6 @@ dotfiles_files:
   - .osx
   - .vimrc
 
-homebrew_installed_packages:
-  - autoconf
-  - autojump
-  - automake
-  - awscli
-  - bash-completion
-  - cloc
-  - coreutils
-  - cowsay
-  - doxygen
-  - enchant
-  - exiftool
-  - fd
-  - fdupes
-  - ffmpeg
-  - freetype
-  - fswatch
-  - gdbm
-  - gettext
-  - gifsicle
-  - git
-  - git-delta
-  - github/gh/gh
-  - go
-  - gpg
-  - graphicsmagick
-  - heroku
-  - hyperfine
-  - inetutils
-  - iperf
-  - jpeg
-  - jpegoptim
-  - jq
-  - lesspipe
-  - libevent
-  - libffi
-  - libmemcached
-  - libpng
-  - { name: libpq, install_options: build-from-source }
-  - libtool
-  - libyaml
-  - mcrypt
-  - memcached
-  - myrepos
-  - ncdu
-  - neovim
-  - nginx
-  - nmap
-  - node
-  - nvm
-  - openblas
-  - openssl
-  - ossp-uuid
-  - pandoc
-  - parallel
-  - pkg-config
-  - postgresql
-  - pre-commit
-  - pv
-  - pwgen
-  - pyenv
-  - qpdf
-  - readline
-  - redis
-  - rsync
-  - sd
-  - shellcheck
-  - sqlite
-  - sqlite3
-  - ssh-copy-id
-  - starship
-  - tcl-tk
-  - tree
-  - watch
-  - watchman
-  - wget
-  - wrk
-  - xz
-  - zlib
-  - zsh-completions
-  - zsh-history-substring-search
-
-homebrew_taps:
-  - heroku/brew
-  - homebrew/core
-  - homebrew/cask
-
-homebrew_cask_accept_external_apps: true
-homebrew_cask_appdir: /Applications
-homebrew_cask_apps:
-  - chromedriver
-  - docker
-  - dropbox
-  - firefox
-  - google-chrome
-  - licecap
-  - moom
-  - notion
-  - postman
-  - sequel-ace
-  - slack
-  - visual-studio-code
-  - zoom
-
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
 mas_email: ""
@@ -186,9 +82,8 @@ pip_packages: []
 #   state: present # present/absent/latest, default: present
 #   version: "0.16.3" # default: N/A
 
-# Set to 'true' to configure Sublime Text.
-configure_sublime: false
-
 #  ( git clone https://github.com/tvd0x2a/redislite --branch m1-support ../redislite-m1-support && cd ../redislite-m1-support && python setup.py install ) 
 # Glob pattern to ansible task files to run after all other tasks are finished.
 post_provision_tasks: []
+
+neovim_path: "{{ homebrew_prefix }}/bin/nvim"
