--- a/default.config.yml
+++ b/default.config.yml
@@ -5,7 +5,12 @@ configure_python: true
 configure_dotfiles: false
 configure_terminal: true
 configure_osx: false
-configure_sublime: false
+configure_vscode: false
+
+configure_sudoers: true
+sudoers_custom_config: |
+  # Allow users in admin group to use sudo with no password.
+  %admin ALL=(ALL) NOPASSWD: ALL
 
 # Set to 'true' to configure the Dock via dockutil.
 configure_dock: true
@@ -40,10 +45,6 @@ dockitems_persist:
   - name: "Slack"
     path: "/Applications/Slack.app/"
 
-configure_sudoers: true
-sudoers_custom_config: |
-  # Allow users in admin group to use sudo with no password.
-  %admin ALL=(ALL) NOPASSWD: ALL
 
 dotfiles_repo: https://github.com/geerlingguy/dotfiles.git
 dotfiles_repo_accept_hostkey: true
