--- a/main.yml
+++ b/main.yml
@@ -23,10 +23,6 @@
     - role: gordian_jklapacz.mac.mas
       when: mas_installed_apps or mas_installed_app_ids
       tags: ['mas']
-    - role: gordian_jklapacz.mac.dock
-      when: configure_dock
-      tags: ['dock']
-    
 
   tasks:
     - import_tasks: tasks/homebrew.yml
@@ -44,15 +40,20 @@
       when: configure_terminal
       tags: ['terminal']
 
+    - import_tasks: tasks/dock.yml
+      when: configure_dock
+      tags: ['dock']
+
     - import_tasks: tasks/osx.yml
       when: configure_osx
       tags: ['osx']
 
+    - import_tasks: tasks/vscode.yml
+      when: configure_vscode
+      tags: ['vscode']
+
     - import_tasks: tasks/extra-packages.yml
       tags: ['extra-packages']
-    
-    - import_tasks: tasks/vscode.yml
-      tags: ['vscode']
 
     - block:
         - name: Run configured post-provision ansible task files.
