--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -70,7 +70,7 @@
 - name: Bootstrap virtualenv
   pip:
     name: ansible
-    virtualenv: "{{ dev_github_dir }}/setup/.venv"
+    virtualenv: "{{ ansible_script_dir }}/.venv"
     virtualenv_site_packages: yes
     virtualenv_python: '{{ pyenv_root }}/versions/{{ item }}/bin/python{% if item | regex_search("^3") %}3{% endif %}'
   with_items:
