--- a/default.config.yml
+++ b/default.config.yml
@@ -75,7 +75,15 @@ gem_packages: []
 # - name: bundler
 #   state: present # present/absent/latest, default: present
 #   version: "~> 1.15.1" # default: N/A
-npm_packages: []
+npm_packages:
+- dockerfilelint
+- dprint
+
+go_packages:
+- module: mvdan.cc/sh/v3/cmd/shfmt@latest
+  bin: shfmt
+- module: github.com/rhysd/actionlint/cmd/actionlint@latest
+  bin: actionlint
 # - name: webpack
 #   state: present # present/absent/latest, default: present
 #   version: "^2.6" # default: N/A
