--- a/default.config.yml
+++ b/default.config.yml
@@ -19,7 +19,7 @@ dockitems_remove:
   - Launchpad
   - TV
   - Podcasts
-  - 'App Store'
+  - "App Store"
   - FaceTime
   - Calendar
   - Contacts
@@ -45,7 +45,6 @@ dockitems_persist:
     path: "/Applications/Google Chrome.app/"
   - name: "Slack"
     path: "/Applications/Slack.app/"
-
 
 dotfiles_repo: https://github.com/geerlingguy/dotfiles.git
 dotfiles_repo_accept_hostkey: true
@@ -76,23 +75,25 @@ gem_packages: []
 #   state: present # present/absent/latest, default: present
 #   version: "~> 1.15.1" # default: N/A
 npm_packages:
-- dockerfilelint
-- dprint
+  - dockerfilelint
+  - dprint
 
 go_packages:
-- module: mvdan.cc/sh/v3/cmd/shfmt@latest
-  bin: shfmt
-- module: github.com/rhysd/actionlint/cmd/actionlint@latest
-  bin: actionlint
+  - module: mvdan.cc/sh/v3/cmd/shfmt@latest
+    bin: shfmt
+  - module: github.com/rhysd/actionlint/cmd/actionlint@latest
+    bin: actionlint
 # - name: webpack
 #   state: present # present/absent/latest, default: present
 #   version: "^2.6" # default: N/A
-pip_packages: []
+pip_packages:
+  - name: yamllint
+  - name: yamlfmt
 # - name: mkdocs
 #   state: present # present/absent/latest, default: present
 #   version: "0.16.3" # default: N/A
 
-#  ( git clone https://github.com/tvd0x2a/redislite --branch m1-support ../redislite-m1-support && cd ../redislite-m1-support && python setup.py install ) 
+#  ( git clone https://github.com/tvd0x2a/redislite --branch m1-support ../redislite-m1-support && cd ../redislite-m1-support && python setup.py install )
 # Glob pattern to ansible task files to run after all other tasks are finished.
 post_provision_tasks: []
 
