--- a/vars/vscode.yml
+++ b/vars/vscode.yml
@@ -10,7 +10,7 @@ vscode_extensions:
   - DaltonMenezes.aura-theme
   - dbaeumer.vscode-eslint
   - donjayamanne.python-environment-manager
-  - donjayamann.python-extension-pack
+  - donjayamanne.python-extension-pack
   - DotJoshJohnson.xml
   - dprint.dprint
   - dracula-theme.theme-dracula
