--- a/default.config.yml
+++ b/default.config.yml
@@ -1,6 +1,7 @@
 ---
 downloads: ~/.ansible-downloads/
 
+configure_nix: false
 configure_python: true
 configure_dotfiles: true
 configure_terminal: true
