--- a/main.yml
+++ b/main.yml
@@ -82,6 +82,10 @@
 
     - import_tasks: tasks/extra-packages.yml
       tags: ["extra-packages"]
+    
+    - import_tasks: tasks/nix.yml
+      tags: ["nix"]
+      when: configure_nix
 
     - block:
         - name: Run configured post-provision ansible task files.
